Details
-
Bug
-
Status: Closed (View Workflow)
-
Blocker
-
Resolution: Fixed
-
12.3
-
None
-
Unexpected results
-
Q2/2026 Server Development
Description
For invalid xml the row is holding the xml from previous rows
CREATE TABLE t1(a VARCHAR(50), b XMLTYPE AS (a) VIRTUAL); |
INSERT INTO t1(a) VALUES('<yyyyyyyyy>xxxxxxxxxxxxxxxxxxx</yyyyyyyyy>'); |
INSERT INTO t1(a) VALUES('a'); |
INSERT INTO t1(a) VALUES('b'); |
INSERT INTO t1(a) VALUES('<dddddddddd>tttttttttttttttttttttt</dddddddddd>'); |
INSERT INTO t1(a) VALUES('e'); |
|
|
SELECT * FROM t1; |
DROP TABLE t1; |
MariaDB [test]> SELECT * FROM t1;
|
+-------------------------------------------------+-------------------------------------------------+
|
| a | b |
|
+-------------------------------------------------+-------------------------------------------------+
|
| <yyyyyyyyy>xxxxxxxxxxxxxxxxxxx</yyyyyyyyy> | <yyyyyyyyy>xxxxxxxxxxxxxxxxxxx</yyyyyyyyy> |
|
| a | ayyyyyyyyy>xxxxxxxxxxxxxxxxxxx</yyyyyyyyy> |
|
| b | byyyyyyyyy>xxxxxxxxxxxxxxxxxxx</yyyyyyyyy> |
|
| <dddddddddd>tttttttttttttttttttttt</dddddddddd> | <dddddddddd>tttttttttttttttttttttt</dddddddddd> |
|
| e | edddddddddd>tttttttttttttttttttttt</dddddddddd> |
|
+-------------------------------------------------+-------------------------------------------------+
|
5 rows in set, 3 warnings (0,001 sec)
|
|
|
Warning (Code 1292): Incorrect XML value: 'a'
|
Warning (Code 1292): Incorrect XML value: 'b'
|
Warning (Code 1292): Incorrect XML value: 'e'
|
Attachments
Issue Links
- is caused by
-
MDEV-39124 XMLTYPE: allow only well-formed XML
-
- Closed
-
- relates to
-
MDEV-37100 No value resolution for non-deterministic defaults
-
- Confirmed
-