MDEV-39589 Wrong results with xmltype as a virtual column.

Store value in the XML column even if an error happened.